# src/controllers/auth.controller.js
@@ -5,10 +5,11 @@ const registrationService = require('../services/registration.service');
 /**
  * Set and return a JWT after a successful passport authentication
  * @param {Express.Request} req Express Request
+ * @param {Object} req.user Mongoose user model
  * @param {Express.Response} res Express Response
  */
 async function createJwt(req, res) {
-  const jwt = authService.signUserJwt(req.user);
+  const jwt = authService.createJwtFromUser(req.user);
 
   res.cookie('jwt', jwt, {
     httpOnly: true,
@@ -21,11 +22,32 @@ async function createJwt(req, res) {
 }
 
 /**
+ * Get a JWT from the express request
+ * @param {*} req Express Request
+ * @returns {String} JWT Token
+ */
+function getJwt(req) {
+  if (req) {
+    let headerJwt = req.header('Authorization');
+
+    if (headerJwt) {
+      headerJwt = headerJwt.replace('Bearer ', '');
+    }
+
+    const cookieJwt = req.cookies.jwt;
+
+    return headerJwt || cookieJwt;
+  }
+
+  return null;
+}
+
+/**
  * Register a new user and assign it to req.user for passport authentication
  * @param {Express.Request} req Express Request
  * @param {Express.Response} res Express Response
  */
-async function register(req, res) {
+async function register(req, res, next) {
   const username = req.body.username;
   const password = req.body.password;
 
@@ -36,9 +58,23 @@ async function register(req, res) {
 
   const newUser = await registrationService.createUser(username, password);
   req.user = newUser;
+  next();
+}
+
+/**
+ * Logs the user out
+ * @param {Express.Request} req Express Request
+ * @param {Express.Response} res Express Response
+ */
+async function clearJwt(req, res) {
+  req.logout();
+  res.clearCookie('jwt');
+  res.status(200).send();
 }
 
 module.exports = {
   createJwt,
+  getJwt,
+  clearJwt,
   register
 };
