# src/routes.js
@@ -8,14 +8,21 @@ const authController = require('./controllers/auth.controller');
 const namesController = require('./controllers/names.controller');
 const rootController = require('./controllers/root.controller');
 
-const router = express.Router();
+const publicRouter = express.Router();
+publicRouter.use('/', swaggerUi.serve);
+publicRouter.get('/', swaggerUi.setup(swaggerDocument));
+publicRouter.post('/api/v1/auth/login', passport.authenticate('local'), authController.createJwt);
+publicRouter.post('/api/v1/auth/register', authController.register, authController.createJwt);
+publicRouter.post('/api/v1/auth/logout', authController.clearJwt);
 
-router.use('/', swaggerUi.serve);
-router.get('/', swaggerUi.setup(swaggerDocument));
+const secureRouter = express.Router();
 
-router.get('/api/v1', rootController.getMetadata);
-router.get('/api/v1/auth/login', passport.authenticate('local'), authController.createJwt);
-router.get('/api/v1/auth/register', authController.register, authController.createJwt);
-router.get('/api/v1/names', namesController.getNames);
+secureRouter.use(passport.authenticate('jwt', { session: false }));
 
-module.exports = router;
+secureRouter.get('/api/v1', rootController.getMetadata);
+secureRouter.get('/api/v1/names', namesController.getNames);
+
+module.exports = {
+  publicRouter,
+  secureRouter
+};
